--- a/modules/ROOT/partials/configuration/inline.adoc
+++ b/modules/ROOT/partials/configuration/inline.adoc
@@ -27,7 +27,7 @@ tinymce.init({
 
 NOTE: {productname} in inline mode will not initialize on the following elements: `area`, `base`, `basefont`, `br`, `col`, `frame`, `hr`, `img`, `input`, `isindex`, `link`, `meta`, `param`, `embed`, `source`, `wbr`, `track`, `colgroup`, `option`, `table`, `tbody`, `tfoot`, `thead`, `tr`, `th`, `td`, `script`, `noscript`, `style`, `textarea`, `video`, `audio`, `iframe`, `object`, and `menu`.
 
-For more information on the differences between the editing modes, please see this page link:{baseurl}/general-configuration-guide/use-tinymce-inline/[here].
+For more information on the differences between the editing modes, please see this page xref:general-configuration-guide/use-tinymce-inline/[here].
 
 === CSS stylesheets and inline editor content
 
