--- a/modules/ROOT/partials/configuration/inline_boundaries.adoc
+++ b/modules/ROOT/partials/configuration/inline_boundaries.adoc
@@ -1,7 +1,7 @@
 [[inline_boundaries]]
 == `inline_boundaries`
 
-The *inline_boundaries* option allows you to disable the inline boundaries. For information on how to change the appearance of the inline boundaries see the link:{baseurl}/general-configuration-guide/boilerplate-content-css/[Boilerplate Content CSS page].
+The *inline_boundaries* option allows you to disable the inline boundaries. For information on how to change the appearance of the inline boundaries see the xref:general-configuration-guide/boilerplate-content-css/[Boilerplate Content CSS page].
 
 *Type:* `Boolean`
 
