--- a/modules/ROOT/partials/configuration/inline_boundaries_selector.adoc
+++ b/modules/ROOT/partials/configuration/inline_boundaries_selector.adoc
@@ -3,7 +3,7 @@
 
 The *inline_boundaries_selector* option allows you specify what elements the inline boundaries should apply to. This defaults to `a[href],code,.mce-annotation` but can be extended to include other inline elements such as `b`, `strong`, `i`, and `em`.
 
-If you add new elements, you need to add CSS selectors for them in the content CSS. See the link:{baseurl}/general-configuration-guide/boilerplate-content-css/[Boilerplate Content CSS page] for details.
+If you add new elements, you need to add CSS selectors for them in the content CSS. See the xref:general-configuration-guide/boilerplate-content-css/[Boilerplate Content CSS page] for details.
 
 *Type:* `String`
 
