--- a/modules/ROOT/partials/configuration/max_width.adoc
+++ b/modules/ROOT/partials/configuration/max_width.adoc
@@ -3,7 +3,7 @@
 
 This option allows you to set the maximum width that a user can stretch the entire {productname} interface (by grabbing the dragable area in the bottom right of the editor interface) when using the modern theme.
 
-NOTE: This behavior is different than the link:{baseurl}/plugins/opensource/autoresize/[`autoresize`] plugin, which controls the resizing of the editable area only, not the entire editor.
+NOTE: This behavior is different than the xref:plugins/opensource/autoresize/[`autoresize`] plugin, which controls the resizing of the editable area only, not the entire editor.
 
 *Type:* `Number`
 
