--- a/modules/ROOT/partials/configuration/mobile.adoc
+++ b/modules/ROOT/partials/configuration/mobile.adoc
@@ -1,7 +1,7 @@
 [[mobile]]
 == `mobile`
 
-This option allows you specify an alternative configuration for mobile devices. This setting allows for overriding settings specifically for mobile devices. For information on customizing {productname} for mobile devices, see: link:{baseurl}/mobile/[{productname} mobile].
+This option allows you specify an alternative configuration for mobile devices. This setting allows for overriding settings specifically for mobile devices. For information on customizing {productname} for mobile devices, see: xref:mobile/[{productname} mobile].
 
 *Type:* `Object`
 
