--- a/modules/ROOT/partials/configuration/plugins.adoc
+++ b/modules/ROOT/partials/configuration/plugins.adoc
@@ -17,4 +17,4 @@ tinymce.init({
 
 NOTE: Each plugin entry should be separated by a blank space.
 
-link:{baseurl}/plugins/[Check this documentation page for a list of available plugins].
+xref:plugins/[Check this documentation page for a list of available plugins].
