--- a/modules/ROOT/partials/configuration/selector.adoc
+++ b/modules/ROOT/partials/configuration/selector.adoc
@@ -47,4 +47,4 @@ tinymce.init({
 });
 ----
 
-For more information on the differences between regular and inline editing modes please see this page link:{baseurl}/general-configuration-guide/use-tinymce-inline/[here].
+For more information on the differences between regular and inline editing modes please see this page xref:general-configuration-guide/use-tinymce-inline/[here].
