--- a/modules/ROOT/partials/configuration/skin.adoc
+++ b/modules/ROOT/partials/configuration/skin.adoc
@@ -19,4 +19,4 @@ tinymce.init({
 });
 ----
 
-If you would like to create your own skin, please see the guide link:{baseurl}/advanced/creating-a-skin/[here].
+If you would like to create your own skin, please see the guide xref:advanced/creating-a-skin/[here].
