--- a/modules/ROOT/partials/configuration/valid_children.adoc
+++ b/modules/ROOT/partials/configuration/valid_children.adoc
@@ -3,7 +3,7 @@
 
 The valid_children enables you to control what child elements can exists within specified parent elements.
 
-{productname} will remove/split any non HTML5 or HTML transitional contents by default. So for example a `p` can't be a child of another `p` element. The default value for this option is controlled by the current link:{baseurl}/configure/content-filtering/#schema[schema].
+{productname} will remove/split any non HTML5 or HTML transitional contents by default. So for example a `p` can't be a child of another `p` element. The default value for this option is controlled by the current xref:configure/content-filtering.adoc#schema[schema].
 
 The syntax for this option is a comma separated list of parents with elements that should be added/removed as valid children for that element. So for example `'+body[style]'` would add style as a valid child of body.
 
