--- a/modules/ROOT/partials/toolbar-button-ids/core-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/core-toolbar-buttons.adoc
@@ -68,7 +68,7 @@
 | Applies the italic format to the current selection.
 
 | `language`
-| Dropdown list with languages to apply to the selection. This button requires the link:{baseurl}/configure/localization/#content_langs[`content_langs` option]. +
+| Dropdown list with languages to apply to the selection. This button requires the xref:configure/localization.adoc#content_langs[`content_langs` option]. +
 include::partial$misc/requires_5_9v.adoc[]
 
 | `lineheight`
