--- a/modules/ROOT/pages/release-notes/release-notes5109.adoc
+++ b/modules/ROOT/pages/release-notes/release-notes5109.adoc
@@ -23,8 +23,8 @@ A https://researchgate.net/publication/266654651_mXSS_attacks_Attacking_well-sec
 
 This vulnerability also impacts these related TinyMCE APIs and plugins:
 
-* xref:apis/tinymce.editor.adoc#getcontent[`tinymce.Editor.getContent({ format: 'raw' })`].
-* xref:apis/tinymce.editor.adoc#resetcontent[`tinymce.Editor.resetContent()`].
+* xref:api/tinymce/tinymce.editor.adoc#getcontent[`tinymce.Editor.getContent({ format: 'raw' })`].
+* xref:api/tinymce/tinymce.editor.adoc#resetcontent[`tinymce.Editor.resetContent()`].
 * xref:plugins/opensource/autosave.adoc[Autosave] open source plugin.
 
 This vulnerability has been patched in {productname} 5.10.9 by:
