--- a/modules/ROOT/partials/configuration/draggable_modal.adoc
+++ b/modules/ROOT/partials/configuration/draggable_modal.adoc
@@ -1,7 +1,7 @@
 [[draggable_modal]]
 == `draggable_modal`
 
-Use the `draggable_modal` option to enable dragging for link:{baseurl}/ui-components/dialog/[modal dialogs].
+Use the `draggable_modal` option to enable dragging for xref:ui-components/dialog/[modal dialogs].
 
 *Type:* `Boolean`
 
