--- a/modules/ROOT/partials/configuration/toolbar.adoc
+++ b/modules/ROOT/partials/configuration/toolbar.adoc
@@ -1,11 +1,11 @@
 [[toolbar]]
 == `toolbar`
 
-This option allows you to specify the link:{baseurl}/advanced/available-toolbar-buttons/[buttons] and the order that they will appear on {productname}'s toolbar.
+This option allows you to specify the xref:advanced/available-toolbar-buttons/[buttons] and the order that they will appear on {productname}'s toolbar.
 
 === Grouping toolbar buttons
 
-To specify the buttons that should appear on {productname}'s toolbar, the `toolbar` option should be provided with a space separated list of link:{baseurl}/advanced/available-toolbar-buttons/[toolbar buttons]. To create groups within this list, please add `|` pipe characters between the groups of buttons that you would like to create.
+To specify the buttons that should appear on {productname}'s toolbar, the `toolbar` option should be provided with a space separated list of xref:advanced/available-toolbar-buttons/[toolbar buttons]. To create groups within this list, please add `|` pipe characters between the groups of buttons that you would like to create.
 
 *Type:* `String`
 
@@ -19,7 +19,7 @@ tinymce.init({
 });
 ----
 
-NOTE: The size of toolbar groups affects the behavior of the toolbar drawer when the `toolbar_mode` is set to `'floating'` (default value) or `'sliding'`. For more information, see: link:{baseurl}/configure/editor-appearance/#toolbar_mode[the `toolbar_mode` setting].
+NOTE: The size of toolbar groups affects the behavior of the toolbar drawer when the `toolbar_mode` is set to `'floating'` (default value) or `'sliding'`. For more information, see: xref:configure/editor-appearance.adoc#toolbar_mode[the `toolbar_mode` setting].
 
 [[addingtoolbargrouplabels]]
 ==== Adding toolbar group labels
